--- a/app/src/main/res/layout/single_grounder.xml
+++ b/app/src/main/res/layout/single_grounder.xml
@@ -13,8 +13,8 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:src="@drawable/cricket_player" />
 
@@ -53,6 +53,18 @@
         android:background="@drawable/button_red_colour_round"
         android:gravity="center"
         android:text="C"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
+
+
+    <TextView
+        android:id="@+id/VCnameTv"
+        android:visibility="gone"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/button_red_colour_round"
+        android:gravity="center"
+        android:text="VC"
         android:textColor="@color/white"
         android:textStyle="bold" />
 
