--- a/app/src/main/res/layout/fragment_live_match.xml
+++ b/app/src/main/res/layout/fragment_live_match.xml
@@ -3,33 +3,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_image_contest"
     tools:context=".InSideMyMatches.LiveMatchFragment">
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/LinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="150dp"
-        android:orientation="horizontal"
-        android:padding="10dp">
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_image_contest"
+        android:visibility="gone">
 
-        <TextView
-            android:id="@+id/upcomingMatch"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/border1_green"
-            android:gravity="center"
-            android:text="VIEW UPCOMING MATCHES"
-            android:textColor="@color/white"
-            android:textStyle="bold" />
+            android:layout_marginTop="150dp"
+            android:orientation="horizontal"
+            android:padding="10dp">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/upcomingMatch"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/border1_green"
+                android:gravity="center"
+                android:text="VIEW UPCOMING MATCHES"
+                android:textColor="@color/white"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+    </FrameLayout>
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiper"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/view_pager"
+            android:layout_gravity="bottom"
+            android:layout_margin="5dp" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </FrameLayout>
