--- a/app/src/main/res/layout/single_grounder.xml
+++ b/app/src/main/res/layout/single_grounder.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="120dp"
     android:layout_height="120dp"
     android:layout_gravity="center"
     android:gravity="center">
 
     <LinearLayout
+        android:id="@+id/linerLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
@@ -13,25 +15,31 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/playerImg"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:src="@drawable/cricket_player" />
 
-        <TextView
-            android:id="@+id/nameTxt"
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/button_red_colour_round"
-            android:backgroundTint="@color/white"
-            android:gravity="center"
-            android:maxLines="1"
-            android:paddingHorizontal="8dp"
-            android:text="Name"
-            android:textColor="@color/black"
-            android:textSize="10dp"
-            android:textStyle="bold" />
+            app:cardCornerRadius="5dp">
+
+            <TextView
+                android:id="@+id/nameTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:maxLines="1"
+                android:paddingHorizontal="8dp"
+                android:text="Name"
+                android:textColor="@color/white"
+                android:textSize="10dp"
+                android:textStyle="bold" />
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/pointsTxt"
