--- a/app/src/main/res/layout/single_grounder.xml
+++ b/app/src/main/res/layout/single_grounder.xml
@@ -19,7 +19,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:src="@drawable/cricket_player" />
+            android:src="@drawable/ic_player_logo" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
