--- a/app/src/main/res/layout/select_team_list.xml
+++ b/app/src/main/res/layout/select_team_list.xml
@@ -75,6 +75,19 @@
                     android:textColor="@color/white"
                     android:textStyle="bold" />
 
+                <TextView
+                    android:id="@+id/badgeTxtGoru"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="top"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/button_red_colour_round"
+                    android:gravity="center"
+                    android:text="C"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
                 <ImageView
                     android:id="@+id/image1"
                     android:layout_width="55dp"
@@ -86,10 +99,24 @@
                     android:layout_height="match_parent"
                     android:layout_weight="2" />
 
+                <TextView
+                    android:id="@+id/VCnameTv"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="top"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/border2_black"
+                    android:gravity="center"
+                    android:text="VC"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
                 <ImageView
                     android:id="@+id/image2"
                     android:layout_width="55dp"
                     android:layout_height="52dp"
+                    android:layout_marginRight="10dp"
                     android:src="@drawable/ic_player_logo" />
 
             </LinearLayout>
@@ -128,6 +155,8 @@
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="55dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:layout_height="wrap_content"
                     app:cardCornerRadius="5dp">
 
@@ -153,7 +182,9 @@
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="55dp"
+                    android:layout_marginRight="10dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     app:cardCornerRadius="5dp">
 
                     <TextView
