Adapter/LiveMatchListAdapter.java..

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="header_black">#373737</color>
     <color name="counter_bg">#008577</color>
     <color name="yellow_theme">#ECBD15</color>
+    <color name="light_yellow">#F8F3E2</color>
     <color name="gray_light1">#81D3E8</color>
     <color name="light_pink">#F3E5F0</color>
     <color name="bg_color">#5EB7DA</color>
