--- a/app/src/main/res/layout/my_created_team_list.xml
+++ b/app/src/main/res/layout/my_created_team_list.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_margin="12dp"
+        android:id="@+id/cardView1"
         app:cardCornerRadius="8dp">
 
         <LinearLayout
