ic_black_small_ball.xml.

--- a/app/src/main/res/layout/activity_only_team_preview.xml
+++ b/app/src/main/res/layout/activity_only_team_preview.xml
@@ -289,9 +289,17 @@
             android:layout_weight="1" />
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_black_small_ball"
+            android:gravity="center" />
+
+        <TextView
             android:id="@+id/teamA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingStart="5dp"
             android:text="TeamA"
             android:textColor="@color/white"
             android:textSize="15sp"
@@ -303,9 +311,16 @@
             android:layout_weight="1" />
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_white_small_ball"
+            android:gravity="center" />
+
+        <TextView
             android:id="@+id/teamB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingStart="5dp"
             android:text="TeamB"
             android:textColor="@color/white"
             android:textSize="15sp"
