--- a/app/src/main/res/layout/fragment_upcoming_match.xml
+++ b/app/src/main/res/layout/fragment_upcoming_match.xml
@@ -9,8 +9,8 @@
         android:id="@+id/LinearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        android:background="@drawable/bg_image_contest">
+        android:background="@drawable/bg_image_contest"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,7 +47,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewMatchList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_below="@+id/view_pager"
             android:layout_gravity="bottom"
             android:layout_margin="5dp"
