--- a/app/src/main/res/layout/activity_only_team_preview.xml
+++ b/app/src/main/res/layout/activity_only_team_preview.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/pitch_bg"
+    android:background="@drawable/pitch_bg1"
     tools:context=".OnlyTeamPreView.OnlyTeamPreview">
 
     <androidx.appcompat.widget.Toolbar
@@ -234,7 +234,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
                 android:weightSum="10">
 
                 <View
@@ -250,7 +249,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
                 android:weightSum="10">
 
                 <TextView
