--- a/app/src/main/res/layout/team_preview.xml
+++ b/app/src/main/res/layout/team_preview.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/playerImg"
                 android:layout_width="55dp"
                 android:layout_height="60dp"
-                android:src="@drawable/ic_baseline_person_3" />
+                android:src="@drawable/ic_player_logo" />
 
             <RelativeLayout
                 android:id="@+id/RL_Name"
