--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.YoYoIq" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.YoYoIq" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -12,6 +12,4 @@
         <item name="android:statusBarColor" tools:targetApi="l">#BA0700</item>
         <!-- Customize your theme here. -->
     </style>
-
-
 </resources>
